--- a/roles/docker-containers/adguardhome/templates/AdGuardHome.yaml.j2
+++ b/roles/docker-containers/adguardhome/templates/AdGuardHome.yaml.j2
@@ -33,6 +33,7 @@ dns:
   upstream_dns:
     - '[/{{ local_domain }}/]{{ local_dns }}'
     - https://dns10.quad9.net/dns-query
+    - 1.1.1.1:53
   upstream_dns_file: ""
   bootstrap_dns:
     - 1.1.1.1:53
@@ -73,7 +74,7 @@ dns:
     - domain: wled
       answer: {{ local_wled_ip }}
     - domain: "*.{{ external_domain }}"
-      answer: {{ nas_ip }}
+      answer: {{ local_proxy_ip }}
   blocked_services: []
   upstream_timeout: 10s
   private_networks: []
