Squashed commit of the following:
commit 8d0771a575266ba8e49155048b07d5f8932aec35
Merge: 25a285c defb264
Author: Charis Kozis <harisjmd@gmail.com>
Date:   Fri May 5 23:38:27 2023 +0300

    Merge pull request #5 from harisjmd/feature/portainer

    Adding portainer-ce container and also in Traefik

commit defb264cbdbd29c2cf2b91081133d5610afecb13
Merge: e12e2fb 25a285c
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Fri May 5 23:37:08 2023 +0300

    Merge branch 'master' into feature/portainer

commit 25a285c2f0ffa1a5472c440c22ed5ca7ba3ad304
Merge: 8034e70 274fa52
Author: Charis Kozis <harisjmd@gmail.com>
Date:   Fri May 5 23:31:21 2023 +0300

    Merge pull request #4 from harisjmd/bugfix/traefik-adguard1

    Adding secondary adguard host to traefik

commit e12e2fb9f2c069efc165307e82c5f98c6c00cdc7
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Fri May 5 23:28:47 2023 +0300

    Adding portainer-ce container and also in Traefik

commit 274fa5237f9ac1d3d488db5e9dc4001895484a95
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Fri May 5 22:56:31 2023 +0300

    Adding secondary adguard host to traefik
    - Fixing restart policy
    - Updating AdGuard conf to latest version

commit 8034e70e5f0a26197b6d4f3443bfdc5b3caaefe9
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Tue May 2 23:23:37 2023 +0300

    Adding Vault example

commit ad3910e5cfe2aeb46b7e8d43778d84f3c70d56b1
Merge: 62fdf7c 8cb6e60
Author: Charis Kozis <harisjmd@gmail.com>
Date:   Tue May 2 22:56:00 2023 +0300

    Merge pull request #3 from harisjmd/sync

    Sync

commit 8cb6e609fc8882222f6dcc7efc516012e197fb69
Merge: abfa3ff a46f6aa
Author: Charis Kozis <harisjmd@gmail.com>
Date:   Tue May 2 22:41:09 2023 +0300

    Merge pull request #2 from harisjmd/bugfix/dir-and-dns

    Fixes:

commit a46f6aadeb614231963e24418cd4e4d30a9d34aa
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Tue May 2 22:39:36 2023 +0300

    Fixes:
    - Nextcloud dir mapping
  

--- a/roles/docker-containers/adguardhome/templates/AdGuardHome.yaml.j2
+++ b/roles/docker-containers/adguardhome/templates/AdGuardHome.yaml.j2
@@ -1,6 +1,5 @@
 bind_host: 0.0.0.0
 bind_port: 80
-beta_bind_port: 0
 users:
   - name: {{ adguard_user }}
     password: {{ adguard_password }}
@@ -8,23 +7,20 @@ auth_attempts: 5
 block_auth_min: 15
 http_proxy: ""
 language: ""
+theme: auto
 debug_pprof: false
 web_session_ttl: 720
 dns:
   bind_hosts:
     - 0.0.0.0
   port: 53
-  statistics_interval: 30
-  querylog_enabled: true
-  querylog_file_enabled: true
-  querylog_interval: 168h
-  querylog_size_memory: 1000
   anonymize_client_ip: false
   protection_enabled: true
   blocking_mode: default
   blocking_ipv4: ""
   blocking_ipv6: ""
   blocked_response_ttl: 10
+  protection_disabled_until: null
   parental_block_host: family-block.dns.adguard.com
   safebrowsing_block_host: standard-block.dns.adguard.com
   ratelimit: 20
@@ -33,6 +29,7 @@ dns:
   upstream_dns:
     - '[/{{ local_domain }}/]{{ local_dns }}'
     - https://dns10.quad9.net/dns-query
+    - 1.1.1.1:53
   upstream_dns_file: ""
   bootstrap_dns:
     - 1.1.1.1:53
@@ -55,25 +52,36 @@ dns:
   bogus_nxdomain: []
   aaaa_disabled: false
   enable_dnssec: false
-  edns_client_subnet: false
+  edns_client_subnet:
+    custom_ip: ""
+    enabled: false
+    use_custom: false
   max_goroutines: 300
   handle_ddr: true
   ipset: []
   ipset_file: ""
+  bootstrap_prefer_ipv6: false
   filtering_enabled: true
   filters_update_interval: 24
   parental_enabled: false
-  safesearch_enabled: false
   safebrowsing_enabled: false
   safebrowsing_cache_size: 1048576
   safesearch_cache_size: 1048576
   parental_cache_size: 1048576
   cache_time: 30
+  safe_search:
+    enabled: false
+    bing: true
+    duckduckgo: true
+    google: true
+    pixabay: true
+    yandex: true
+    youtube: true
   rewrites:
     - domain: wled
       answer: {{ local_wled_ip }}
     - domain: "*.{{ external_domain }}"
-      answer: {{ nas_ip }}
+      answer: {{ local_proxy_ip }}
   blocked_services: []
   upstream_timeout: 10s
   private_networks: []
@@ -81,6 +89,10 @@ dns:
   local_ptr_upstreams:
     - '[/2.168.192.in-addr.arpa/]{{ local_dns }}'
     - {{ local_dns }}
+  use_dns64: false
+  dns64_prefixes: []
+  serve_http3: false
+  use_http3_upstreams: false
 tls:
   enabled: false
   server_name: ""
@@ -91,11 +103,23 @@ tls:
   port_dnscrypt: 0
   dnscrypt_config_file: ""
   allow_unencrypted_doh: false
-  strict_sni_check: false
   certificate_chain: ""
   private_key: ""
   certificate_path: ""
   private_key_path: ""
+  strict_sni_check: false
+querylog:
+  ignored: []
+  interval: 168h
+  size_memory: 1000
+  enabled: true
+  file_enabled: true
+statistics:
+  ignored:
+    - {{ adguard1_fqdn }}
+    - {{ adguard2_fqdn }}
+  interval: 720h
+  enabled: true
 filters:
   - enabled: true
     url: https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt
@@ -206,6 +230,8 @@ user_rules:
   - '@@||app-measurement.com^$client=''192.168.2.10'''
   - '@@||logs.amap.com^$client=''192.168.2.10'''
   - '@@||track.wasabi.com^$important'
+  - '@@||img.himovies.top^$important'
+  - '@@||dirty-pink.ers.pw^$important'
   - ""
 dhcp:
   enabled: false
@@ -232,7 +258,15 @@ clients:
     dhcp: true
     hosts: true
   persistent:
-    - name: CSCH_SamsungTV
+    - safe_search:
+        enabled: false
+        bing: false
+        duckduckgo: false
+        google: false
+        pixabay: false
+        yandex: false
+        youtube: false
+      name: CSCH_SamsungTV
       tags:
         - device_tv
       ids:
@@ -243,10 +277,19 @@ clients:
       use_global_settings: false
       filtering_enabled: false
       parental_enabled: false
-      safesearch_enabled: false
       safebrowsing_enabled: false
       use_global_blocked_services: false
-    - name: HP Printer
+      ignore_querylog: false
+      ignore_statistics: false
+    - safe_search:
+        enabled: false
+        bing: false
+        duckduckgo: false
+        google: false
+        pixabay: false
+        yandex: false
+        youtube: false
+      name: HP Printer
       tags:
         - device_printer
       ids:
@@ -256,9 +299,10 @@ clients:
       use_global_settings: false
       filtering_enabled: false
       parental_enabled: false
-      safesearch_enabled: false
       safebrowsing_enabled: false
       use_global_blocked_services: false
+      ignore_querylog: false
+      ignore_statistics: false
 log_file: ""
 log_max_backups: 0
 log_max_size: 100
@@ -270,4 +314,4 @@ os:
   group: ""
   user: ""
   rlimit_nofile: 0
-schema_version: 14
+schema_version: 20
