Added PiVpn role for Wireguard - Fixed traefik fqdn

--- a/roles/docker-containers/http-services/dashy/templates/conf.yml.j2
+++ b/roles/docker-containers/http-services/dashy/templates/conf.yml.j2
@@ -94,7 +94,7 @@ sections:
         id: 3_836_portainer
       - title: Traefik
         icon: https://icon.horse/icon/traefik.io
-        url: https://{{ traefik_fqdn }}.loan/
+        url: https://{{ traefik_fqdn }}/
         target: newtab
         statusCheck: true
         statusCheckAllowInsecure: true
