Synced Dashy conf and fixed proxy network

--- a/roles/docker-containers/http-services/dashy/templates/conf.yml.j2
+++ b/roles/docker-containers/http-services/dashy/templates/conf.yml.j2
@@ -6,7 +6,7 @@ pageInfo:
     - title: Google
       path: https://www.google.com
 appConfig:
-  theme: dracula
+  theme: colorful
   layout: auto
   iconSize: medium
   language: en
@@ -14,10 +14,128 @@ appConfig:
   statusCheck: true
   statusCheckInterval: 10
   customColors:
-    dashy-docs:
-      primary: '#f5f6f7'
-      background: '#202020'
-      background-darker: '#121212'
+    colorful:
+      primary: '#e8eae1'
+      background: '#1c1c1c'
+      background-darker: '#202122'
+      info: '#04e4f4'
+      success: '#20e253'
+      warning: '#f6f000'
+      error: '#fca016'
+      danger: '#f80363'
+      neutral: '#272f4d'
+      white: '#fff'
+      black: '#000'
+      item-group-background: transparent
+      medium-grey: '#5e6474'
+      item-background: '#202122'
+      item-background-hover: '#1c1c1c'
+      transparent-70: rgba(0,0,0,0.701961)
+      transparent-50: rgba(0,0,0,0.501961)
+      transparent-30: rgba(0,0,0,0.301961)
+      transparent-white-70: hsla(0,0%,100%,0.701961)
+      transparent-white-50: hsla(0,0%,100%,0.501961)
+      transparent-white-30: hsla(0,0%,100%,0.301961)
+      heading-text-color: '#e8eae1'
+      nav-link-text-color: '#e8eae1'
+      nav-link-background-color: '#1c1c1c'
+      nav-link-text-color-hover: '#e8eae1'
+      nav-link-background-color-hover: rgba(96,125,139,0.2)
+      nav-link-border-color: transparent
+      nav-link-border-color-hover: '#e8eae1'
+      nav-link-shadow: '1px 1px 2px #232323'
+      nav-link-shadow-hover: '1px 1px 2px #232323'
+      item-text-color: '#e8eae1'
+      item-text-color-hover: '#e8eae1'
+      item-group-outer-background: '#202122'
+      item-group-heading-text-color: '#e8eae1'
+      item-group-heading-text-color-hover: '#e8eae1'
+      settings-text-color: '#e8eae1'
+      settings-background: '#1c1c1c'
+      config-settings-color: '#e8eae1'
+      config-settings-background: '#202122'
+      config-code-color: '#1c1c1c'
+      config-code-background: '#fff'
+      code-editor-color: '#000'
+      code-editor-background: '#fff'
+      widget-text-color: '#e8eae1'
+      widget-background-color: '#202122'
+      widget-accent-color: '#1c1c1c'
+      widget-base-background: transparent
+      interactive-editor-color: '#e8eae1'
+      interactive-editor-background: '#1c1c1c'
+      interactive-editor-background-darker: '#202122'
+      cloud-backup-color: '#e8eae1'
+      cloud-backup-background: '#202122'
+      search-container-background: '#202122'
+      search-field-background: '#1c1c1c'
+      search-label-color: '#e8eae1'
+      footer-text-color: '#5e6474'
+      footer-text-color-link: '#e8eae1'
+      footer-background: '#202122'
+      context-menu-background: '#1c1c1c'
+      context-menu-color: '#e8eae1'
+      context-menu-secondary-color: '#202122'
+      side-bar-background: '#202122'
+      side-bar-background-lighter: '#1c1c1c'
+      side-bar-color: '#e8eae1'
+      side-bar-item-background: '#202122'
+      side-bar-item-color: '#e8eae1'
+      workspace-web-content-background: '#1c1c1c'
+      minimal-view-background-color: '#1c1c1c'
+      minimal-view-title-color: '#e8eae1'
+      minimal-view-settings-color: '#e8eae1'
+      minimal-view-section-heading-color: '#e8eae1'
+      minimal-view-section-heading-background: '#202122'
+      minimal-view-search-background: '#202122'
+      minimal-view-search-color: '#e8eae1'
+      minimal-view-group-color: '#e8eae1'
+      minimal-view-group-background: '#202122'
+      login-form-color: '#e8eae1'
+      login-form-background: '#1c1c1c'
+      login-form-background-secondary: '#202122'
+      about-page-color: '#fff'
+      about-page-background: '#1c1c1c'
+      about-page-accent: '#e8eae1'
+      scroll-bar-color: '#e8eae1'
+      scroll-bar-background: '#202122'
+      highlight-color: '#1c1c1c'
+      highlight-background: '#e8eae1'
+      progress-bar: '#e8eae1'
+      loading-screen-color: '#e8eae1'
+      loading-screen-background: '#1c1c1c'
+      status-check-tooltip-background: '#202122'
+      status-check-tooltip-color: '#e8eae1'
+      welcome-popup-background: '#202122'
+      welcome-popup-text-color: '#e8eae1'
+      toast-background: '#e8eae1'
+      toast-color: '#1c1c1c'
+      description-tooltip-background: '#202122'
+      description-tooltip-color: '#e8eae1'
+      outline-color: none
+      curve-factor: 5px
+      curve-factor-navbar: 16px
+      curve-factor-small: 2px
+      dimming-factor: '0.7'
+      scroll-bar-width: 8px
+      header-height: 6.3rem
+      footer-height: 128px
+      item-group-padding: 5px
+      item-shadow: '1px 1px 2px #130f23'
+      item-hover-shadow: '1px 4px 6px #000'
+      item-icon-transform: drop-shadow(2px 4px 6px rgba(0,0,0,0.501961)) saturate(0.95)
+      item-icon-transform-hover: drop-shadow(4px 8px 3px rgba(0,0,0,0.501961)) saturate(2)
+      item-group-shadow: '1px 1px 2px #130f23'
+      context-menu-shadow: '1px 1px 2px #130f23'
+      section-max-height: 3000px
+      settings-container-shadow: none
+      side-bar-width: 3.5rem
+      tooltip-arrow-size: 6px
+      tooltip-width: 250px
+      tooltip-padding: 0.2rem
+      font-body: '"Raleway","Trebuchet MS",sans-serif'
+      font-headings: '"Podkova",monospace'
+      font-monospace: '"PTMono","Courier New",monospace'
 sections:
   - name: Networking
     displayData:
@@ -28,21 +146,23 @@ sections:
       hideForGuests: true
     items:
       - title: CSCH Router
-        icon: https://{{ local_ap_ip }}:8443/images/favicon.png
+        icon: https://icon.horse/icon/www.asus.com
         url: http://{{ local_ap_ip }}/Main_Login.asp
         target: newtab
         statusCheck: true
         statusCheckAllowInsecure: true
         id: 0_1064_cschrouter
       - title: Cyta Router
-        icon: https://icon.horse/icon/www.cyta.com.cy
+        icon: https://media.cyta.com.cy/shared/global/logo.png
         url: http://{{ local_isp_router_ip }}/
         target: newtab
         statusCheck: true
         statusCheckAllowInsecure: true
         id: 1_1064_cytarouter
       - title: AK Router
-        icon: https://icon.horse/icon/www.asus.com
+        description: ''
+        icon: >-
+          https://play-lh.googleusercontent.com/Hyedd-vjRpgJHAVdth6SkLaAKyxT_qJvRCzNYFX7qQ-IRZZihygR-29IWlcXORvBmN4
         url: https://{{ local_gateway_ip }}:8443/Main_Login.asp
         target: newtab
         statusCheck: true
@@ -65,40 +185,55 @@ sections:
       collapsed: false
       hideForGuests: false
     items:
-      - title: Home Assistant
-        icon: https://{{ hassio_fqdn }}/static/icons/favicon.ico
-        url: https://{{ hassio_fqdn }}/ui-lovelace-minimalist/home
-        target: newtab
-        statusCheck: true
-        statusCheckAllowInsecure: true
-        id: 0_836_homeassistant
-      - title: NAS OMV
-        icon: https://icon.horse/icon/www.openmediavault.org
-        url: https://{{ omv_fqdn }}/
-        target: newtab
-        statusCheck: true
-        statusCheckUrl: https://{{ omv_fqdn }}/#/login
-        statusCheckAllowInsecure: true
-        id: 1_836_nasomv
-      - title: AdGuard
-        icon: https://icon.horse/icon/adguard.com
-        url: https://{{ adguard_fqdn }}/#
-        target: newtab
-        statusCheck: true
-        id: 2_836_adguard
-      - title: Portainer
-        icon: https://www.portainer.io/hubfs/crane-icon.svg
-        url: http://{{ nas_ip }}:9000/
-        target: newtab
-        statusCheck: true
-        id: 3_836_portainer
-      - title: Traefik
-        icon: https://icon.horse/icon/traefik.io
-        url: https://{{ traefik_fqdn }}/
-        target: newtab
-        statusCheck: true
-        statusCheckAllowInsecure: true
-        id: 4_836_traefik
+     - title: AdGuard 1
+       icon: https://icon.horse/icon/adguard.com
+       url: https://{{ adguard1_fqdn }}/#
+       target: newtab
+       statusCheck: true
+       id: 0_836_adguard
+     - title: AdGuard 2
+       icon: https://icon.horse/icon/adguard.com
+       url: https://{{ adguard2_fqdn }}/#
+       target: newtab
+       statusCheck: true
+       id: 1_836_adguard
+     - title: Traefik
+       icon: >-
+         https://raw.githubusercontent.com/docker-library/docs/a6cc2c5f4bc6658168f2a0abbb0307acaefff80e/traefik/logo.png
+       url: https://{{ traefik_fqdn }}/
+       target: newtab
+       statusCheck: true
+       statusCheckAllowInsecure: true
+       id: 2_836_traefik
+     - title: Home Assistant
+       icon: https://{{ hassio_fqdn }}/static/icons/favicon.ico
+       url: https://{{ hassio_fqdn }}/ui-lovelace-minimalist/home
+       target: newtab
+       statusCheck: true
+       statusCheckAllowInsecure: true
+       id: 0_836_homeassistant
+     - title: NAS OMV
+       icon: https://neellik.com/wp-content/uploads/2022/03/openmediavault.png
+       url: https://{{ omv_fqdn }}/
+       target: newtab
+       statusCheck: true
+       statusCheckUrl: https://{{ omv_fqdn }}/#/login
+       statusCheckAllowInsecure: true
+       id: 4_836_nasomv
+     - title: Portainer
+       icon: https://www.portainer.io/hubfs/crane-icon.svg
+       url: https://{{ portainer_fqdn }}/
+       target: newtab
+       statusCheck: true
+       id: 5_836_portainer
+     - title: Nextcloud
+       icon: >-
+         https://static-00.iconduck.com/assets.00/nextcloud-icon-512x512-quluhp24.png
+       url: https://{{ nextcloud_fqdn }}/
+       target: newtab
+       statusCheck: true
+       statusCheckAllowInsecure: true
+       id: 6_836_nextcloud
   - name: Devices
     icon: mdi-cellphone-link
     displayData:
@@ -110,15 +245,24 @@ sections:
     items:
       - title: Ender3 V2
         icon: https://icon.horse/icon/octoprint.org
-        url: http://{{ local_printer_ip }}/
+        url: https://{{ local_printer_ip }}/
         target: newtab
         statusCheck: true
+        statusCheckUrl: https://{{ local_printer_ip }}/
         statusCheckAllowInsecure: true
         id: 0_707_enderv
       - title: WLED TV
-        icon: https://icon.horse/icon/kno.wled.ge
+        icon: >-
+          https://play-lh.googleusercontent.com/ler5YeORDfc_zUWvP4evz_96TgsBrlnmPojz5V8dJEZ5IK6d24NjVR0X1Qlao4K0D7c
         url: http://{{ local_wled_ip }}/
         target: newtab
-        statusCheckAllowInsecure: true
         statusCheck: true
+        statusCheckAllowInsecure: true
         id: 1_707_wledtv
+      - title: HP 6500 Printer
+        icon: https://img.icons8.com/?size=2x&id=24665&format=png
+        url: https://{{ local_hp_printer_ip }}/
+        target: newtab
+        statusCheck: true
+        statusCheckAllowInsecure: true
+        id: 2_707_hpprinter
