--- a/roles/docker-containers/monitoring/prometheus/templates/prometheus.yml.j2
+++ b/roles/docker-containers/monitoring/prometheus/templates/prometheus.yml.j2
@@ -13,15 +13,31 @@ global:
 
 # A scrape configuration containing exactly one endpoint to scrape.
 scrape_configs:
-  - job_name: "nodeexporter"
+  - job_name: "node"
     scrape_interval: 5s
     static_configs:
       - targets: ["nodeexporter:{{ nodeexporter_port }}"]
+        labels:
+          service: "{{ vault_nas_hostname }}"
+      - targets: ["{{ vault_hassio_ip }}:{{ vault_nodeexporter_port }}"]
+        labels:
+          service: "{{ vault_hassio_hostname }}"
+      - targets: ["{{ vault_ckaccess_ip }}:{{ vault_nodeexporter_port }}"]
+        labels:
+          service: "{{ vault_ckaccess_hostname }}"
 
   - job_name: "cadvisor"
     scrape_interval: 5s
     static_configs:
       - targets: ["cadvisor:{{ cadvisor_port }}"]
+        labels:
+          service: "{{ vault_nas_hostname }}"
+      - targets: ["{{ vault_hassio_ip }}:{{ remote_cadvisor_port }}"]
+        labels:
+          service: "{{ vault_hassio_hostname }}"
+      - targets: ["{{ vault_ckaccess_ip }}:{{ remote_cadvisor_port }}"]
+        labels:
+          service: "{{ vault_ckaccess_hostname }}"
 
   - job_name: "prometheus"
     scrape_interval: 10s
