--- a/roles/pivpn/templates/options.conf.j2
+++ b/roles/pivpn/templates/options.conf.j2
@@ -1,6 +1,6 @@
 IPv4dev=eth0
 dhcpReserv=1
-IPv4addr={{ vpn_server_ip }}/24
+IPv4addr={{ vpn_server_ip }}
 IPv4gw={{ vpn_local_gw }}
 install_user={{ vpn_user }}
 install_home=/home/{{ vpn_user }}
